--- a/.github/workflows/pure-padavanonly.yml
+++ b/.github/workflows/pure-padavanonly.yml
@@ -1,4 +1,4 @@
-name: pure-padavanonly-360t7
+name: pure-padavanonly-redmi-ax6000
 
 on:
   repository_dispatch:
@@ -81,7 +81,7 @@ jobs:
       run: |
         cd openwrt
         echo -e "$(nproc) thread compile"
-        make -j$(nproc) || make -j1 || make -j1 V=s || (curl -k -d "title=OpenWrt-360T7固件编译失败" -d "content=编译固件版本：${{ env.FIRMWARE_VERSION }}%0A编译开始时间：${{ env.START_DATE }}%0A编译结束时间：$(date +'%Y年%m月%d日 %H点%M分%S秒')" -d "token=${{ env.PUSHPLUS_TOKEN }}&channel=cp&webhook=server" "http://www.pushplus.plus/send")
+        make -j$(nproc) || make -j1 || make -j1 V=s || (curl -k -d "title=OpenWrt-RedMi-AX6000固件编译失败" -d "content=编译固件版本：${{ env.FIRMWARE_VERSION }}%0A编译开始时间：${{ env.START_DATE }}%0A编译结束时间：$(date +'%Y年%m月%d日 %H点%M分%S秒')" -d "token=${{ env.PUSHPLUS_TOKEN }}&channel=cp&webhook=server" "http://www.pushplus.plus/send")
         echo "status=success" >> $GITHUB_OUTPUT
         
     - name: 整理固件
@@ -97,8 +97,8 @@ jobs:
         rm -rf *kernel*
         rm -rf *.manifest
         rm -rf sha256sums
-        mv *sysupgrade.bin ${{ env.FIRMWARE_VERSION }}-padavanonly-360T7-108M-sysupgrade.bin
-        mv *factory.bin ${{ env.FIRMWARE_VERSION }}-padavanonly-360T7-108M-factory.bin
+        mv *sysupgrade.bin ${{ env.FIRMWARE_VERSION }}-padavanonly-RedMi-AX6000-sysupgrade.bin
+        mv *factory.bin ${{ env.FIRMWARE_VERSION }}-padavanonly-RedMi-AX6000-factory.bin
         echo "FIRMWARE=$PWD" >> $GITHUB_ENV
         echo "status=success" >> $GITHUB_OUTPUT
         
@@ -106,7 +106,7 @@ jobs:
       uses: actions/upload-artifact@main
       if: steps.organize.outputs.status == 'success' && !cancelled()
       with:
-        name: ${{ env.FIRMWARE_VERSION }}-OpenWrt-360T7
+        name: ${{ env.FIRMWARE_VERSION }}-OpenWrt-RedMi-AX6000
         path: ${{ env.FIRMWARE }}
         
     - name: 创建release标签
@@ -114,8 +114,8 @@ jobs:
       if: env.UPLOAD_RELEASE == 'true' && !cancelled()
       run: |
          time=$(date +%Y.%m.%d)
-         release_tag="360T7-padavanonly-openwrt-$time"
-         release_name="360T7-padavanonly-openwrt-$time"
+         release_tag="RedMi-AX6000-padavanonly-openwrt-$time"
+         release_name="RedMi-AX6000-padavanonly-openwrt-$time"
          echo "默认网关：192.168.10.1
          登录密码：none" >> release.txt
          echo "release_name=$release_name" >> $GITHUB_OUTPUT
