--- a/ax6000_hanwckf.config
+++ b/ax6000_hanwckf.config
@@ -11,6 +11,7 @@ CONFIG_PACKAGE_luci-app-timecontrol=y
 CONFIG_PACKAGE_luci-app-ttyd=y
 CONFIG_PACKAGE_luci-app-vlmcsd=y
 CONFIG_PACKAGE_luci-app-vsftpd=y
+CONFIG_PACKAGE_luci-app-watchcat=y
 CONFIG_PACKAGE_luci-app-wol=y
 CONFIG_PACKAGE_luci-theme-edge-1907=y
 CONFIG_PACKAGE_lrzsz=y
