--- a/ax6000_hanwckf.config
+++ b/ax6000_hanwckf.config
@@ -1,4 +1,4 @@
-CONFIG_PACKAGE_luci-app-alist=y
+# CONFIG_PACKAGE_luci-app-alist is not set
 CONFIG_PACKAGE_luci-app-arpbind=y
 CONFIG_PACKAGE_luci-app-autoreboot=y
 CONFIG_PACKAGE_luci-app-frpc=y
