--- a/ax6000_lede.config
+++ b/ax6000_lede.config
@@ -1,3 +1,7 @@
+CONFIG_TARGET_mediatek=y
+CONFIG_TARGET_mediatek_filogic=y
+CONFIG_TARGET_mediatek_filogic_DEVICE_xiaomi_redmi-router-ax6000=y
+
 # 开启IPV6
 CONFIG_PACKAGE_ipv6helper=y
 
@@ -11,12 +15,13 @@ CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks_NONE_Server=y
 CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Xray=y
 # CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks_Simple_Obfs is not set
 # CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ShadowsocksR_Libev_Client is not set
-# CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ChinaDNS_NG is not set
-# CONFIG_PACKAGE_luci-app-chinadns-ng is not set
+CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ChinaDNS_NG=y
+CONFIG_PACKAGE_luci-app-chinadns-ng=y
 # CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_MosDNS is not set
 # CONFIG_PACKAGE_luci-app-mosdns is not set
+
 # 广告屏蔽大师
-# CONFIG_PACKAGE_luci-app-adbyby-plus is not set
+CONFIG_PACKAGE_luci-app-adbyby-plus=y
 # 阿里云挂载
 # CONFIG_PACKAGE_luci-app-alist is not set
 # IP/MAC绑定
@@ -30,8 +35,8 @@ CONFIG_PACKAGE_luci-app-autoreboot=y
 # CONFIG_PACKAGE_ddns-scripts_dnspod is not set
 # 内网穿透
 CONFIG_PACKAGE_luci-app-frpc=y
-# 盒子去广告 AX6000 LEDE 内核版本5.15不支持会崩溃，LEDE选择adbyby-plus
-CONFIG_PACKAGE_luci-app-ikoolproxy=y
+# 盒子去广告 AX6000 LEDE 内核版本5.15不支持会崩溃
+# CONFIG_PACKAGE_luci-app-ikoolproxy is not set
 # 网络流量监控
 CONFIG_PACKAGE_luci-app-nlbwmon=y
 # 释放内存
@@ -59,9 +64,12 @@ CONFIG_PACKAGE_luci-app-wol=y
 # 终端发送接收文件工具
 CONFIG_PACKAGE_lrzsz=y
 
+# 硬件acc加速
+CONFIG_PACKAGE_luci-app-turboacc=y
+
 # uhttp使用https
 # CONFIG_PACKAGE_luci-ssl-openssl is not set
 # CONFIG_PACKAGE_libuhttpd-openssl is not set
 
 # 主题
-CONFIG_PACKAGE_luci-theme-argon=y
+CONFIG_PACKAGE_luci-theme-argon-mod=y
