--- a/ax6000_hanwckf.config
+++ b/ax6000_hanwckf.config
@@ -64,4 +64,5 @@ CONFIG_PACKAGE_lrzsz=y
 # CONFIG_PACKAGE_libuhttpd-openssl is not set
 
 # 主题
+CONFIG_PACKAGE_luci-theme-bootstrap-mod=n
 CONFIG_PACKAGE_luci-theme-argon=y
