--- a/ax6000_hanwckf.config
+++ b/ax6000_hanwckf.config
@@ -30,6 +30,7 @@ CONFIG_PACKAGE_luci-app-autoreboot=y
 # CONFIG_PACKAGE_ddns-scripts_dnspod is not set
 # 内网穿透
 CONFIG_PACKAGE_luci-app-frpc=y
+CONFIG_PACKAGE_luci-i18n-frpc-zh-cn=y
 # 盒子去广告 AX6000 LEDE 内核版本5.15不支持会崩溃，LEDE选择adbyby-plus
 CONFIG_PACKAGE_luci-app-ikoolproxy=y
 # 网络流量监控
