--- a/.github/workflows/build-hanwckf.yml
+++ b/.github/workflows/build-hanwckf.yml
@@ -101,7 +101,8 @@ jobs:
       if: steps.compile.outputs.status == 'success' && env.UPLOAD_BIN_DIR == 'true'
       with:
         name: OpenWrt_bin-RedMi-AX6000-${{ env.FIRMWARE_VERSION }}
-        path: openwrt/bin
+        path: openwrt/bin/packages
+        #path: openwrt/bin
 
     - name: 整理固件
       id: organize
